--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>TK Elmet Portfolio</title>
@@ -6,7 +7,7 @@
 </head>
 <body>
     <div id="header">
-
+        <img src="img/logo.png" type="img/png">
     </div>
     <div id="showcase">
 
