--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="header">
-        <img src="img/logo.png" type="img/png">
+        <img src="img/logo.png" type="img/png" id="header_logo">
     </div>
     <div id="showcase">
 
