--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div id="header">
-        <img src="img/logo.png" type="img/png" id="header_logo">
-    </div>
-    <div id="showcase">
+    <header> 
+    	<nav id="navbar">  
+		    <a href="index.html"><img src="img/logo.png" type="img/png" id="header_logo"></a>
+		    <ul>
+		    	<li><a href="#about">ABOUT</a></li>
+		    	<li><a href="#projects">PROJECTS</a></li>
+		    	<li><a href="#skills">SKILLS</a></li>
+		    	<li><a href="#contact">CONTACT</a></li>
+			</ul>
+		</nav>
+		<div id="showcase">
 
-    </div>
+		</div>
+    </header>
     <div id="about">
 
     </div>
