--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 			</ul>
 		</nav>
 		<div id="showcase">
-
+            <h1>WELCOME TO MY PORTFOLIO</h1>
+            <a>ABOUT ME</a>
 		</div>
     </header>
     <div id="about">
