--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     	<nav id="navbar">  
 		    <a href="index.html"><img src="img/logo.png" type="img/png" id="header_logo"></a>
 		    <ul>
-		    	<li><a href="#about">ABOUT</a></li>
 		    	<li><a href="#projects">PROJECTS</a></li>
 		    	<li><a href="#skills">SKILLS</a></li>
 		    	<li><a href="#contact">CONTACT</a></li>
@@ -18,7 +17,7 @@
 		</nav>
 		<div id="showcase">
             <h1>WELCOME TO MY PORTFOLIO</h1>
-            <a>ABOUT ME</a>
+            <a href="#about">ABOUT ME</a>
 		</div>
     </header>
     <div id="about">
