--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header> 
     	<nav id="navbar">  
-		    <a href="index.html"><img src="img/logo.png" type="img/png" id="header_logo"></a>
+		    <a href="index.html"><img src="img/logo.png" id="header_logo"></a>
 		    <ul>
 		    	<li><a href="#projects">PROJECTS</a></li>
 		    	<li><a href="#skills">SKILLS</a></li>
