--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <title>TK Elmet Portfolio</title>
     <meta charset="UTF-8">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/style.css"  type="text/css">
+    <link rel="icon" href="img/logo.png" type="image/x-icon">
 </head>
 <body>
     <header> 
     	<nav id="navbar">  
-		    <a href="index.html"><img src="img/logo.png" id="header_logo"></a>
+		    <a href="index.html"><img src="img/logo.png" id="header_logo" alt="TK"></a>
 		    <ul>
+                <li><a href="#skills">SKILLS</a></li>
 		    	<li><a href="#projects">PROJECTS</a></li>
-		    	<li><a href="#skills">SKILLS</a></li>
 		    	<li><a href="#contact">CONTACT</a></li>
 			</ul>
 		</nav>
@@ -20,14 +21,31 @@
             <a href="#about">ABOUT ME</a>
 		</div>
     </header>
+
     <div id="about">
-
-    </div>
-    <div id="projects">
-
+        <h1>ABOUT ME</h1>
+        <hr>
+        <div id="about-info">
+            <div id="intro">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Phasellus eget tortor nec nulla dignissim posuere.</p>
+                <p>Curabitur ac velit nec libero pharetra fermentum eget nec nunc. Vivamus vehicula massa non eros efficitur, non vulputate ligula porttitor. Praesent sit amet odio at felis vehicula tincidunt sed at sapien.</p>
+                <div id="cv-button">
+                    <a>CV PDF</a>
+                </div>
+            </div>
+            <div id="portrait">
+                <img src="img/portrait.jpg" alt="portrait">
+            </div>
+        </div>
     </div>
     <div id="skills">
-
+        <h1>SKILLS</h1>
+        <hr>
+    </div>
+    <div id="projects">
+        <h1>PROJECTS</h1>
+        <hr>
     </div>
     <div id="contact">
 
