--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>TK Elmet Portfolio</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css"  type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="icon" href="img/logo.png" type="image/x-icon">
 </head>
 <body>
@@ -31,7 +31,7 @@
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Phasellus eget tortor nec nulla dignissim posuere.</p>
                 <p>Curabitur ac velit nec libero pharetra fermentum eget nec nunc. Vivamus vehicula massa non eros efficitur, non vulputate ligula porttitor. Praesent sit amet odio at felis vehicula tincidunt sed at sapien.</p>
                 <div id="cv-button">
-                    <a>CV PDF</a>
+                    <a href="test.pdf" target="_blank">CV PDF</a>
                 </div>
             </div>
             <div id="portrait">
@@ -42,6 +42,12 @@
     <div id="skills">
         <h1>SKILLS</h1>
         <hr>
+        <div id="skill-logos">
+            <img src="img/html.png" alt="HTML">
+            <img src="img/css.png" alt="CSS">
+            <img src="img/js.png" alt="JavaScript">
+            <img src="img/bootstrap.png" alt="Bootstrap">
+        </div>
     </div>
     <div id="projects">
         <h1>PROJECTS</h1>
