Started projects section

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <title>TK Elmet Portfolio</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="icon" href="img/logo.png" type="image/x-icon">
+    <link rel="icon" href="img/logo/logo.png" type="image/x-icon">
 </head>
 <body>
     <header> 
     	<nav id="navbar">  
-		    <a href="index.html"><img src="img/logo.png" id="header_logo" alt="TK"></a>
+		    <a href="index.html"><img src="img/logo/logo.png" id="header_logo" alt="TK"></a>
 		    <ul>
                 <li><a href="#skills">SKILLS</a></li>
 		    	<li><a href="#projects">PROJECTS</a></li>
@@ -43,15 +43,31 @@
         <h1>SKILLS</h1>
         <hr>
         <div id="skill-logos">
-            <img src="img/html.png" alt="HTML">
-            <img src="img/css.png" alt="CSS">
-            <img src="img/js.png" alt="JavaScript">
-            <img src="img/bootstrap.png" alt="Bootstrap">
+            <img src="img/skills/html.png" alt="HTML">
+            <img src="img/skills/css.png" alt="CSS">
+            <img src="img/skills/js.png" alt="JavaScript">
+            <img src="img/skills/mysql.png" alt="MySQL">
         </div>
     </div>
     <div id="projects">
         <h1>PROJECTS</h1>
         <hr>
+        <div id="projects-content">
+            <div class="project">
+                <a href="https://github.com/Tooma81/weather_express" target="_blank">
+                    <img src="img/projects/weather-express.png" alt="Weather Express">
+                </a>
+                <h2>Weather Express</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="project">
+                <a href="https://github.com/Tooma81/joga_mysql" target="_blank">
+                    <img src="img/projects/joga-mysql.png" alt="MySQL Joga">
+                </a>
+                <h2>MySQL Joga</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
     </div>
     <div id="contact">
 
