contact form and social media wip

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="icon" href="img/logo/logo.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/0f89d6293f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header> 
@@ -56,24 +57,44 @@
             <div class="project">
                 <a href="https://github.com/Tooma81/weather_express" target="_blank">
                     <img src="img/projects/weather-express.png" alt="Weather Express">
-                </a>
                 <h2>Weather Express</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </a>
             </div>
             <div class="project">
                 <a href="https://github.com/Tooma81/joga_mysql" target="_blank">
                     <img src="img/projects/joga-mysql.png" alt="MySQL Joga">
-                </a>
                 <h2>MySQL Joga</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </a>
             </div>
         </div>
     </div>
     <div id="contact">
-
+        <h1>CONTACT</h1>
+        <hr>
+        <div id="contact-form">
+            <h2>PLEASE FILL THE FROM</h2>
+            <form>
+                <label for="name">NAME</label><br>
+                <input type="text" id="name" placeholder="Enter your name"><br><br>
+                <label for="email">EMAIL</label><br>
+                <input type="email" id="email" placeholder="Enter your email"><br><br>
+                <label for="message">MESSAGE</label><br>
+                <input type="text" id="message" placeholder="Add a message"><br><br>
+                <div id="form-btn">
+                    <input type="submit" formaction="mailto:toomas-kaarel.elmet@voco.ee"><br>
+                    <input type="reset">
+                </div>
+            </form>
+        </div>
     </div>
     <div id="footer">
-
+        <img src="img/logo/name.png" alt="TKE">
+        <div id="social-media">
+            <a href="https://github.com/Tooma81" target="_blank"><i class="fa-brands fa-github"></i>GITHUB</a>
+            <a href="https://www.instagram.com/tooma80016/" target="_blank"><i class="fa-brands fa-instagram"></i>INSTAGRAM</a>
+        </div>
     </div>
 </body>
 </html>
