polishing contact form and footer

--- a/index.html
+++ b/index.html
@@ -62,10 +62,24 @@
                 </a>
             </div>
             <div class="project">
+                <a href="https://toomaskaarelvs23.ikt.khk.ee/Veebiarendus/cat_website/" target="_blank">
+                    <img src="img/projects/catweb.png" alt="CatWeb">
+                    <h2>CatWeb</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </a>
+            </div>
+            <div class="project">
                 <a href="https://github.com/Tooma81/joga_mysql" target="_blank">
                     <img src="img/projects/joga-mysql.png" alt="MySQL Joga">
                 <h2>MySQL Joga</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </a>
+            </div>
+            <div class="project">
+                <a href="https://toomaskaarelvs23.ikt.khk.ee/Veebiarendus/firma_leht/" target="_blank">
+                    <img src="img/projects/firma.png" alt="Firma leht">
+                    <h2>Firma leht</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </a>
             </div>
         </div>
@@ -83,7 +97,7 @@
                 <label for="message">MESSAGE</label><br>
                 <input type="text" id="message" placeholder="Add a message"><br><br>
                 <div id="form-btn">
-                    <input type="submit" formaction="mailto:toomas-kaarel.elmet@voco.ee"><br>
+                    <input type="submit" formaction="mailto:toomas-kaarel.elmet@voco.ee" value="Submit"><br>
                     <input type="reset">
                 </div>
             </form>
@@ -92,9 +106,11 @@
     <div id="footer">
         <img src="img/logo/name.png" alt="TKE">
         <div id="social-media">
-            <a href="https://github.com/Tooma81" target="_blank"><i class="fa-brands fa-github"></i>GITHUB</a>
-            <a href="https://www.instagram.com/tooma80016/" target="_blank"><i class="fa-brands fa-instagram"></i>INSTAGRAM</a>
+            <a href="https://github.com/Tooma81" target="_blank"><i class="fa-brands fa-github fa-lg"></i> GITHUB</a>
+            <a href="https://www.instagram.com/tooma80016/" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i> INSTAGRAM</a>
+            <a href="https://www.facebook.com/toomaskaarel.elmet.3" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i> FACEBOOK</a>
         </div>
     </div>
+    <p>&copy;Toomas Kaarel Elmet 2025</p>
 </body>
 </html>
