--- a/index.html
+++ b/index.html
@@ -44,10 +44,18 @@
         <h1>SKILLS</h1>
         <hr>
         <div id="skill-logos">
-            <img src="img/skills/html.png" alt="HTML">
-            <img src="img/skills/css.png" alt="CSS">
-            <img src="img/skills/js.png" alt="JavaScript">
-            <img src="img/skills/mysql.png" alt="MySQL">
+            <a title="HTML">
+                <img src="img/skills/html.png" alt="HTML">
+            </a>
+            <a title="CSS">
+                <img src="img/skills/css.png" alt="CSS">
+            </a>
+            <a title="JavaScript">
+                <img src="img/skills/js.png" alt="JavaScript">
+            </a>
+            <a title="MySQL">
+                <img src="img/skills/mysql.png" alt="MySQL">
+            </a>
         </div>
     </div>
     <div id="projects">
