added border radius and other things

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
             <h2>PLEASE FILL THE FROM</h2>
             <form>
                 <label for="name">NAME</label><br>
-                <input type="text" id="name" placeholder="Enter your name"><br><br>
+                <input type="text" id="name" placeholder="Enter your name" required><br><br>
                 <label for="email">EMAIL</label><br>
-                <input type="email" id="email" placeholder="Enter your email"><br><br>
+                <input type="email" id="email" placeholder="Enter your email" required><br><br>
                 <label for="message">MESSAGE</label><br>
-                <input type="text" id="message" placeholder="Add a message"><br><br>
+                <input type="text" id="message" placeholder="Add a message" required><br><br>
                 <div id="form-btn">
                     <input type="submit" formaction="mailto:toomas-kaarel.elmet@voco.ee" value="Submit"><br>
                     <input type="reset">
