--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>TK Elmet Portfolio</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" media="screen and (max-width: 500px)" href="css/mobile.css">
     <link rel="icon" href="img/logo/logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/0f89d6293f.js" crossorigin="anonymous"></script>
 </head>
