added mobile css to about, contact form and footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>TK Elmet Portfolio</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" media="screen and (max-width: 500px)" href="css/mobile.css">
+    <link rel="stylesheet" media="screen and (max-width: 600px)" href="css/mobile.css">
     <link rel="icon" href="img/logo/logo.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/0f89d6293f.js" crossorigin="anonymous"></script>
 </head>
@@ -115,9 +115,9 @@
     <div id="footer">
         <img src="img/logo/name.png" alt="TKE">
         <div id="social-media">
-            <a href="https://github.com/Tooma81" target="_blank"><i class="fa-brands fa-github fa-lg"></i> GITHUB</a>
-            <a href="https://www.instagram.com/tooma80016/" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i> INSTAGRAM</a>
-            <a href="https://www.facebook.com/toomaskaarel.elmet.3" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i> FACEBOOK</a>
+            <a href="https://github.com/Tooma81" target="_blank"><i class="fa-brands fa-github fa-lg"></i> <span class="social-media-name">GITHUB</span></a>
+            <a href="https://www.instagram.com/tooma80016/" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i> <span class="social-media-name">INSTAGRAM</span></a>
+            <a href="https://www.facebook.com/toomaskaarel.elmet.3" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i> <span class="social-media-name">FACEBOOK</span></a>
         </div>
     </div>
     <p>&copy;Toomas Kaarel Elmet 2025</p>
