--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>TK Elmet Portfolio</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" media="screen and (max-width: 600px)" href="css/mobile.css">
     <link rel="icon" href="img/logo/logo.png" type="image/x-icon">
