added cv and changed one of the projects to aasta tegija 2024

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Phasellus eget tortor nec nulla dignissim posuere.</p>
                 <p>Curabitur ac velit nec libero pharetra fermentum eget nec nunc. Vivamus vehicula massa non eros efficitur, non vulputate ligula porttitor. Praesent sit amet odio at felis vehicula tincidunt sed at sapien.</p>
                 <div id="cv-button">
-                    <a href="test.pdf" target="_blank">CV PDF</a>
+                    <a href="cv.pdf" target="_blank">CV PDF</a>
                 </div>
             </div>
             <div id="portrait">
@@ -86,9 +86,9 @@
                 </a>
             </div>
             <div class="project">
-                <a href="https://toomaskaarelvs23.ikt.khk.ee/Veebiarendus/firma_leht/" target="_blank">
-                    <img src="img/projects/firma.png" alt="Firma leht">
-                    <h2>Firma leht</h2>
+                <a href="https://github.com/Eallekors/Aasta-Tegija-24" target="_blank">
+                    <img src="img/projects/aasta-tegija.png" alt="Aasta Tegija 2024">
+                    <h2>Aasta Tegija 2024</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </a>
             </div>
