--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header> 
-    	<nav id="navbar">  
+    	<nav>
 		    <a href="index.html"><img src="img/logo/logo.png" id="header_logo" alt="TK"></a>
 		    <ul>
                 <li><a href="#skills">SKILLS</a></li>
@@ -25,14 +25,14 @@
 		</div>
     </header>
 
-    <div id="about">
+    <section id="about">
         <h1>ABOUT ME</h1>
         <hr>
         <div id="about-info">
             <div id="intro">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Phasellus eget tortor nec nulla dignissim posuere.</p>
-                <p>Curabitur ac velit nec libero pharetra fermentum eget nec nunc. Vivamus vehicula massa non eros efficitur, non vulputate ligula porttitor. Praesent sit amet odio at felis vehicula tincidunt sed at sapien.</p>
+                <p>Curabitur ac velit nec libero pharetra fermentum eget nec nunc.</p>
                 <div id="cv-button">
                     <a href="cv.pdf" target="_blank">CV PDF</a>
                 </div>
@@ -41,8 +41,8 @@
                 <img src="img/portrait.jpg" alt="portrait">
             </div>
         </div>
-    </div>
-    <div id="skills">
+    </section>
+    <section id="skills">
         <h1>SKILLS</h1>
         <hr>
         <div id="skill-logos">
@@ -58,9 +58,12 @@
             <a title="MySQL">
                 <img src="img/skills/mysql.png" alt="MySQL">
             </a>
+            <a title="Adobe Illustrator">
+                <img src="img/skills/illustrator.png" alt="Adobe Illustrator">
+            </a>
         </div>
-    </div>
-    <div id="projects">
+    </section>
+    <section id="projects">
         <h1>PROJECTS</h1>
         <hr>
         <div id="projects-content">
@@ -93,8 +96,8 @@
                 </a>
             </div>
         </div>
-    </div>
-    <div id="contact">
+    </section>
+    <section id="contact">
         <h1>CONTACT</h1>
         <hr>
         <div id="contact-form">
@@ -112,15 +115,15 @@
                 </div>
             </form>
         </div>
-    </div>
-    <div id="footer">
+    </section>
+    <footer>
         <img src="img/logo/name.png" alt="TKE">
         <div id="social-media">
             <a href="https://github.com/Tooma81" target="_blank"><i class="fa-brands fa-github fa-lg"></i> <span class="social-media-name">GITHUB</span></a>
             <a href="https://www.instagram.com/tooma80016/" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i> <span class="social-media-name">INSTAGRAM</span></a>
             <a href="https://www.facebook.com/toomaskaarel.elmet.3" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i> <span class="social-media-name">FACEBOOK</span></a>
         </div>
-    </div>
+    </footer>
     <p>&copy;Toomas Kaarel Elmet 2025</p>
 </body>
 </html>
