--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div id="social-media">
             <a href="https://github.com/Tooma81" target="_blank"><i class="fa-brands fa-github fa-lg"></i> <span class="social-media-name">GITHUB</span></a>
             <a href="https://www.instagram.com/tooma80016/" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i> <span class="social-media-name">INSTAGRAM</span></a>
-            <a href="https://www.facebook.com/toomaskaarel.elmet.3" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i> <span class="social-media-name">FACEBOOK</span></a>
+            <a href="https://www.linkedin.com/in/toomas-kaarel-elmet-828258330/" target="_blank"><i class="fa-brands fa-linkedin fa-lg"></i> <span class="social-media-name">LINKEDIN</span></a>
         </div>
     </footer>
     <p>&copy;Toomas Kaarel Elmet 2025</p>
