--- a/index.html
+++ b/index.html
@@ -10,25 +10,21 @@
     <script src="https://kit.fontawesome.com/0f89d6293f.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header> 
-    	<nav>
-		    <a href="index.html"><img src="img/logo/logo.png" id="header_logo" alt="TK"></a>
-            <button id="sidemenu-open-btn" onclick="openMenu()">MENU</button>
-            <div id="sideMenu">
-                <ul>
-                    <button id="sidemenu-close-btn" onclick="closeMenu()">CLOSE</button>
-                    <li><a href="#skills">SKILLS</a></li>
-                    <li><a href="#projects">PROJECTS</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
-                </ul>
-            </div>
-		</nav>
-        
-		<div id="showcase">
-            <h1>WELCOME TO MY PORTFOLIO</h1>
-            <a href="#about">ABOUT ME</a>
-		</div>
-    </header>
+    <nav>
+        <a href="index.html"><img src="img/logo/logo.png" id="header_logo" alt="TK"></a>
+        <button id="sidemenu-open-btn" onclick="openMenu()"><i class="fa-solid fa-bars fa-2xl"></i></button>
+        <div id="nav-menu">
+            <a href="#about" onclick="closeMenu()">ABOUT</a>
+            <a href="#skills" onclick="closeMenu()">SKILLS</a>
+            <a href="#projects" onclick="closeMenu()">PROJECTS</a>
+            <a href="#contact" onclick="closeMenu()">CONTACT</a>
+            <button id="sidemenu-close-btn" onclick="closeMenu()"><i class="fa-solid fa-xmark fa-2xl"></i></button>
+        </div>
+    </nav> 
+    <div id="showcase">
+        <h1>WELCOME TO MY PORTFOLIO</h1>
+        <a href="#about">ABOUT ME</a>
+    </div>
     <section id="about">
         <h1>ABOUT ME</h1>
         <hr>
@@ -132,11 +128,11 @@
     <!--script for mobile sidemenu-->
     <script>
         function openMenu() {
-            document.getElementById("sideMenu").style.width = "250px";
+            document.getElementById("nav-menu").style.width = "50vw";
             console.log("open side menu")
         }
         function closeMenu() {
-            document.getElementById("sideMenu").style.width = "0";
+            document.getElementById("nav-menu").style.width = "0";
             console.log("close side menu")
         }
     </script>
