Finished first version of mobile sidemenu

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <nav>
-        <a href="index.html"><img src="img/logo/logo.png" id="header_logo" alt="TK"></a>
+        <a id="header-logo" href="index.html"><img src="img/logo/logo.png" alt="TK"></a>
         <button id="sidemenu-open-btn" onclick="openMenu()"><i class="fa-solid fa-bars fa-2xl"></i></button>
         <div id="nav-menu">
+            <button id="sidemenu-close-btn" onclick="closeMenu()"><i class="fa-solid fa-xmark fa-2xl"></i></button>
             <a href="#about" onclick="closeMenu()">ABOUT</a>
             <a href="#skills" onclick="closeMenu()">SKILLS</a>
             <a href="#projects" onclick="closeMenu()">PROJECTS</a>
             <a href="#contact" onclick="closeMenu()">CONTACT</a>
-            <button id="sidemenu-close-btn" onclick="closeMenu()"><i class="fa-solid fa-xmark fa-2xl"></i></button>
         </div>
     </nav> 
     <div id="showcase">
