Added figma and git to skills

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
             <a title="Adobe Illustrator">
                 <img src="img/skills/illustrator.png" alt="Adobe Illustrator">
             </a>
+            <a title="Figma">
+                <img src="img/skills/figma.png" alt="Figma">
+            </a>
+            <a title="Git">
+                <img src="img/skills/git.png" alt="Git">
+            </a>
         </div>
     </section>
     <section id="projects">
