intro, switched one project to westcar, added wordpress to skills

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <hr>
         <div id="about-info">
             <div id="intro">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Phasellus eget tortor nec nulla dignissim posuere.</p>
+                <p>My name is Toomas Kaarel Elmet and I’m 21 years old. I am currently learning to become a software developer at Tartu Vocational College. I have been interested in Computers and programming for a long time now and I am passionate about improving myself in that field.  </p>
+                <p>Outside of computers I like staying active and go to gym regularly. I also like to go cycling, jogging and swimming occasionally.</p>
                 <p>Curabitur ac velit nec libero pharetra fermentum eget nec nunc.</p>
                 <div id="cv-button">
                     <a href="cv.pdf" target="_blank">CV PDF</a>
@@ -67,6 +67,9 @@
             <a title="Git">
                 <img src="img/skills/git.png" alt="Git">
             </a>
+            <a title="WordPress">
+                <img src="img/skills/wordpress.png" alt="WordPress">
+            </a>
         </div>
     </section>
     <section id="projects">
@@ -74,10 +77,10 @@
         <hr>
         <div id="projects-content">
             <div class="project">
-                <a href="https://github.com/Tooma81/weather_express" target="_blank">
-                    <img src="img/projects/weather-express.png" alt="Weather Express">
-                <h2>Weather Express</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <a href="https://westcar.eu/" target="_blank">
+                    <img src="img/projects/westcar.png" alt="West Car">
+                    <h2>West Car</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </a>
             </div>
             <div class="project">
@@ -90,8 +93,8 @@
             <div class="project">
                 <a href="https://github.com/Tooma81/joga_mysql" target="_blank">
                     <img src="img/projects/joga-mysql.png" alt="MySQL Joga">
-                <h2>MySQL Joga</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <h2>MySQL Joga</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </a>
             </div>
             <div class="project">
