added cv button to ignore theme

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p>Outside of computers I like staying active and go to gym regularly. I also like to go cycling, jogging and swimming occasionally.</p>
                 <p>Curabitur ac velit nec libero pharetra fermentum eget nec nunc.</p>
                 <div id="cv-button">
-                    <a href="cv.pdf" target="_blank">CV PDF</a>
+                    <a href="cv.pdf" target="_blank" class="ignore-theme">CV PDF</a>
                 </div>
             </div>
             <div id="portrait">
