--- a/index.html
+++ b/index.html
@@ -80,31 +80,31 @@
         <hr>
         <div id="projects-content">
             <div class="project">
-                <a href="https://westcar.eu/" target="_blank">
+                <a href="https://vs24elmet.ita.voco.ee/westcar/" target="_blank">
                     <img src="img/projects/westcar.png" alt="West Car">
                     <h2>West Car</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Homepage for West Car OÜ created as a group project. Prototyped in Figma and made using WordPress and Elementor.</p>
                 </a>
             </div>
             <div class="project">
                 <a href="https://toomaskaarelvs23.ikt.khk.ee/Veebiarendus/cat_website/" target="_blank">
                     <img src="img/projects/catweb.png" alt="CatWeb">
                     <h2>CatWeb</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>A multipage website created using HTML, CSS and a little bit of JavaScript. It features a image gallery and a contact form</p>
                 </a>
             </div>
             <div class="project">
                 <a href="https://github.com/Tooma81/joga_mysql" target="_blank">
                     <img src="img/projects/joga-mysql.png" alt="MySQL Joga">
                     <h2>MySQL Joga</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>[Vahetan välja]</p>
                 </a>
             </div>
             <div class="project">
-                <a href="https://github.com/Eallekors/Aasta-Tegija-24" target="_blank">
+                <a href="https://vs24elmet.ita.voco.ee/AastaTegija24/" target="_blank">
                     <img src="img/projects/aasta-tegija.png" alt="Aasta Tegija 2024">
                     <h2>Aasta Tegija 2024</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Group entry for the Aasta tegija 2024 competiton. Prototyped in Figma. Created with HTML, CSS, JavaScript and with the help of Bootstrap</p>
                 </a>
             </div>
         </div>
