added react calculator to projects

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
             <div id="intro">
                 <p>My name is Toomas Kaarel Elmet and I’m 21 years old. I am currently learning to become a software developer at Tartu Vocational College. I have been interested in Computers and programming for a long time now and I am passionate about improving myself in that field.  </p>
                 <p>Outside of computers I like staying active and go to gym regularly. I also like to go cycling, jogging and swimming occasionally.</p>
-                <p>Curabitur ac velit nec libero pharetra fermentum eget nec nunc.</p>
                 <div id="cv-button">
                     <a href="cv.pdf" target="_blank" class="ignore-theme">CV PDF</a>
                 </div>
@@ -94,10 +93,10 @@
                 </a>
             </div>
             <div class="project">
-                <a href="https://github.com/Tooma81/joga_mysql" target="_blank">
-                    <img src="img/projects/joga-mysql.png" alt="MySQL Joga">
-                    <h2>MySQL Joga</h2>
-                    <p>[Vahetan välja]</p>
+                <a href="https://github.com/Eallekors/React-Project/tree/main/calculator" target="_blank">
+                    <img src="img/projects/calculator.png" alt="React Calculator">
+                    <h2>React Calculator</h2>
+                    <p>A simple calculator app created with React. Supports inputs from keyboard. Made as a group project.</p>
                 </a>
             </div>
             <div class="project">
@@ -114,7 +113,7 @@
         <hr>
         <div id="contact-form">
             <h2>PLEASE FILL THE FROM</h2>
-            <form>
+            <form action="send_form.php" method="POST">
                 <label for="name">NAME</label><br>
                 <input type="text" id="name" placeholder="Enter your name" required><br><br>
                 <label for="email">EMAIL</label><br>
@@ -122,8 +121,8 @@
                 <label for="message">MESSAGE</label><br>
                 <input type="text" id="message" placeholder="Add a message" required><br><br>
                 <div id="form-btn">
-                    <input type="submit" formaction="mailto:toomas-kaarel.elmet@voco.ee" value="Submit"><br>
-                    <input type="reset">
+                    <input type="submit" value="Submit"><br>
+                    <input type="reset" value="Clear">
                 </div>
             </form>
         </div>
