--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
             <h2>PLEASE FILL THE FROM</h2>
             <form action="send_form.php" method="POST">
                 <label for="name">NAME</label><br>
-                <input type="text" id="name" placeholder="Enter your name" required><br><br>
+                <input type="text" id="name" name="name" placeholder="Enter your name" required><br><br>
                 <label for="email">EMAIL</label><br>
-                <input type="email" id="email" placeholder="Enter your email" required><br><br>
+                <input type="email" id="email" name="email" placeholder="Enter your email" required><br><br>
                 <label for="message">MESSAGE</label><br>
-                <input type="text" id="message" placeholder="Add a message" required><br><br>
+                <input type="text" id="message" name="message" placeholder="Add a message" required><br><br>
                 <div id="form-btn">
                     <input type="submit" value="Submit"><br>
                     <input type="reset" value="Clear">
