switched from internal js to external

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" media="screen and (max-width: 600px)" href="css/mobile.css">
     <link rel="icon" href="img/logo/logo.png" type="image/x-icon">
+    <script src="js/mobile.js"></script>
+    <script src="js/theme.js"></script>
     <script src="https://kit.fontawesome.com/0f89d6293f.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -14,6 +16,7 @@
         <a id="header-logo" href="index.html"><img src="img/logo/logo.png" alt="TK"></a>
         <button id="sidemenu-open-btn" onclick="openMenu()"><i class="fa-solid fa-bars fa-2xl"></i></button>
         <div id="nav-menu">
+            <script src="mobile.js"></script>
             <button id="sidemenu-close-btn" onclick="closeMenu()"><i class="fa-solid fa-xmark fa-2xl"></i></button>
             <a class="menu-btn" href="#about" onclick="closeMenu()">ABOUT</a>
             <a class="menu-btn" href="#skills" onclick="closeMenu()">SKILLS</a>
@@ -136,83 +139,5 @@
         </div>
     </footer>
     <p id="copyright">&copy;Toomas Kaarel Elmet 2025</p>
-    <script>
-        //script for mobile sidemenu
-        function openMenu() {
-            if (window.innerWidth <= 600) {
-                document.getElementById("nav-menu").style.width = "50vw";
-                console.log("open side menu")
-            }
-        }
-        function closeMenu() {
-            if (window.innerWidth <= 600) {
-                document.getElementById("nav-menu").style.width = "0";
-                console.log("close side menu")
-            }    
-        }
-        //script for theme switcher
-        function lightMode() {
-            document.getElementById("light-switch").style.display = "none";
-            document.getElementById("dark-switch").style.display = "block";
-            document.getElementById("nav-menu").style.background = "#fff";
-            document.getElementById("sidemenu-open-btn").style.color = "#000";
-            document.getElementById("sidemenu-close-btn").style.color = "#000";
-            document.querySelector("nav").style.background = "#fff";
-            document.querySelectorAll("a").forEach(link => {
-                if (!link.classList.contains("ignore-theme")) {
-                    link.style.color = "#000";
-                }
-            });
-            document.querySelectorAll("h1").forEach(title => {
-                if (!title.classList.contains("ignore-theme")) {
-                    title.style.color = "#000";
-                }
-            });
-            document.querySelectorAll("h2").forEach(title2 => {
-                title2.style.color = "#000";
-                title2.style.background = "#fff";
-            });
-            document.querySelectorAll("p").forEach(paragraph => {
-                paragraph.style.color = "#000";
-            });
-            document.querySelectorAll("form").forEach(form => {
-                form.style.background = "#fff";
-            });
-            document.querySelectorAll("label").forEach(label => {
-                label.style.color = "#000";
-            });
-            document.body.style.background = "#fff";
-            console.log("light mode enabled")
-        }
-        function darkMode() {
-            document.getElementById("light-switch").style.display = "block";
-            document.getElementById("dark-switch").style.display = "none";
-            document.getElementById("nav-menu").style.background = "#000";
-            document.getElementById("sidemenu-open-btn").style.color = "#fff";
-            document.getElementById("sidemenu-close-btn").style.color = "#fff";
-            document.querySelector("nav").style.background = "#000";
-            document.querySelectorAll("a").forEach(link => {
-                link.style.color = "#fff";
-            });
-            document.querySelectorAll("h1").forEach(title => {
-                title.style.color = "#fff";
-            });
-            document.querySelectorAll("h2").forEach(title2 => {
-                title2.style.color = "#fff";
-                title2.style.background = "#000";
-            });
-            document.querySelectorAll("p").forEach(paragraph => {
-                paragraph.style.color = "#fff";
-            });
-            document.querySelectorAll("form").forEach(form => {
-                form.style.background = "#000";
-            });
-            document.querySelectorAll("label").forEach(label => {
-                label.style.color = "#fff";
-            });
-            document.body.style.background = "#000"
-            console.log("dark mode enabled")
-        }
-    </script>
 </body>
 </html>
